gcc/testsuite/rust/rustc/ui/issues/issue-27008.rs
struct S;

fn main() {
    let b = [0; S];
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { dg-error ".E0308." "" { target *-*-* } .-2 }
}

